<resources>
    <string name="app_name">app0112</string>
    <string name="btnPhoneState">전화 상태 정보 가져오기</string>
    <string name="btnStateListenOn">폰 상태 확인 이벤트 등록</string>
    <string name="btnStateListenOff">폰 상태 확인 이벤트 삭제</string>
    <string name="tvVolleyUrl">"주소 : "</string>
    <string name="tvUrl">주소</string>
    <string name="etServerUrl">데이터를 가져올 서버의 주소를 입력하세요</string>
    <string name="btnVolleyRequest">String</string>
    <string name="btnVolleyRequestJson">Json</string>
    <string name="btnVolley">Volley 사용하기</string>
    <string name="btnVolleyUrlClear">주소 지우기</string>
    <string name="btnGlide">Glide 사용하기</string>
    <string name="btnGlideUse">Glide로 이미지 변경하기</string>
    <string name="etGlide">외부 서버 주소의 이미지 주소 입력</string>
</resources>
